Update header y footer

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,7 +1,9 @@
-:root{
+:root {
     --primary-theme-color: #20232a;
-    --secondary-theme-color:#282c34;
+    --secondary-theme-color: #282c34;
+    --primary-text-color: #fff;
     --primary-font-family: 'Zilla Slab', serif;
     --padding-section: 2rem 0;
     --padding-container: 0 1rem;
+    --primary-all-transition: all 0.25s ease-in-out;
 }
