--- a/css/footer.css
+++ b/css/footer.css
@@ -1,33 +1,65 @@
-.footer{
-position:fixed;
-z-index: 25;
-bottom: 0;
-left: 0;
-width: 100%;
+.footer {
+    position: fixed;
+    display: block;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #9b9b9b;  
+    margin: 0;
 }
-.footer__container{
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-
+.footer__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-.footer__link-socialnetwork-list{
+.footer__link-socialnetwork-list {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     list-style: none;
+    gap: 3rem;
+    margin: 0;
+    padding: 0;
+    /* background-color: green;  */
+    /* padding: 1rem 1rem 1rem 1rem;  */
 }
-.footer__link-socialnetwork-item{
-    padding: 0 0 0 0.5rem;
+.footer__link-socialnetwork-item {
+    display: flex;
+    /* justify-content: center; */
+    /* padding: 0rem 1.5rem 0 0; */
+    /* padding: 0 1.5rem 0 1.5rem; */
 }
-.footer__link-socialwork-item{
-
-}
-.footer__logo-social-item{
-
+.footer__link-socialnetwork{
+    position: relative;
+    display: flex;
+    align-items: center;
+    color: aqua;
+    font-weight: 600;
 }
 .footer-name{
-
+    text-decoration: none;
+    color: var(--primary-text-color);   
+}
+.footer-name:hover{
+    transform: scale(1.25);
+    transition: var(--primary-all-transition);
+}
+.footer__link-copyright{
+    border: 0;
+    /* background-color: brown; */
+    /* padding: 0 auto; */
+    /*padding arriba derecha abajo izquierda*/
+    /* padding: 0 auto; */
+    margin: 1rem 0 1rem 0;
+}
+.footer__logo-social-item {
+    width: 30px;
+    height: 30px;
+    margin: 1rem 0 0 0; 
+}
+.footer__logo-social-item:hover{
+    transform: scale(1.25);
+    transition: var(--primary-all-transition);
 }
