--- a/css/header.css
+++ b/css/header.css
@@ -1,37 +1,47 @@
 .header {
     position: fixed;
-    z-index: 25;
+    z-index: 20;
     top: 0;
     left: 0;
     width: 100%;
+    background-color: #9b9b9b;
+    /* margin: 0 auto; */
 }
-
 .header-nav {
-    
+    padding: 0; 
+    margin: 0;
 }
-
 .header-nav__container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
+    justify-content: space-between; 
+    margin: 0 auto;
     /* margin: 0 0 0 0; */
 
 }
-
 .header-nav__link-logo-container {
     display: flex;
-    /* width: 6.75rem;
-    height: 2rem; */
+    width: 250px;
+    height: 80px; 
+}
+.header-nav__link-logo{
+    width: 100%;
+    height: 100%;
+    padding: 0 0 0 1.5rem;
+}
+.header-nav__link-logo:hover{
+    width: 100%;
+    height: 100%;
+    transform: scale(1.25);
+    transition: var(--primary-all-transition);
 }
 
 .header-nav__menu-icon {
-    display: none;
+    /* display: none;
     border: none;
     opacity: 1;
-    cursor: pointer;
+    cursor: pointer; */
 }
-
 .header-nav__menu-link-list {
     display: flex;
     align-items: center;
@@ -41,9 +51,19 @@
     border: 1rem; */
     
 }
-
 .heaver-nav__menu-link-item {
     display: flex;
 }
-
-.header-nav_menu-link {}
+.header-nav_menu-link {
+    /* text-align-last: center; */
+    text-decoration: none;
+    padding: 1.5rem;
+    /* background-color: yellow;  */
+    text-align: center;
+    text-align-last: center;
+    color: var(--primary-text-color);
+}
+.header-nav_menu-link:hover{
+    transform: scale(1.25);
+    transition: var(--primary-all-transition);
+}
