--- a/css/header.css
+++ b/css/header.css
@@ -5,65 +5,269 @@
     left: 0;
     width: 100%;
     background-color: #9b9b9b;
+    transition: var(--primary-all-transitions);
     /* margin: 0 auto; */
 }
+
 .header-nav {
-    padding: 0; 
+    padding: 0;
     margin: 0;
+    transition: var(--primary-all-transitions);
 }
+
+.header--scroll {
+    background-color: var(--primary-theme-color);
+    box-shadow: 0 0.0625rem 0.0625rem 0 var(--tertiary-shadow-color);
+}
+
 .header-nav__container {
     display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
     margin: 0 auto;
     /* margin: 0 0 0 0; */
+    max-width: var(--max-width-container);
+    margin: auto;
+    padding: var(--padding-container);
 
 }
+
+.header-nav--scroll {
+    padding: 0.5rem 0;
+}
+
 .header-nav__link-logo-container {
     display: flex;
-    width: 250px;
-    height: 80px; 
+    width: 150px;
+    height: 70px;
+    min-width: 150px;
+    min-height: 70px;
+    padding: 1rem;
 }
-.header-nav__link-logo{
+
+.header-nav__link-logo {
     width: 100%;
     height: 100%;
-    padding: 0 0 0 1.5rem;
+    /* padding: 0 0 0 1.5rem;
+    width:"50px"; 
+    height:"20px";  */
+
 }
-.header-nav__link-logo:hover{
+
+/* .header-nav__link-logo:hover {
     width: 100%;
     height: 100%;
     transform: scale(1.25);
+    cursor: pointer;
     transition: var(--primary-all-transition);
-}
+} */
 
-.header-nav__menu-icon {
+.header-nav__menu-icon-container {
     /* display: none;
     border: none;
     opacity: 1;
     cursor: pointer; */
+    color: var(--primary-text-color);
+    font-size: 1.5rem;
+    cursor: pointer;
 }
+
 .header-nav__menu-link-list {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     list-style: none;
+    gap: 2rem;
     /* padding: 1rem;
     border: 1rem; */
-    
+    background-image: linear-gradient(to top, var(--primary-theme-color), var(--secondary-theme-color));
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    pointer-events: none;
+    list-style: none;
+    transition: var(--primary-all-transitions);
 }
+
+.header-nav__menu-link-list--open {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 .heaver-nav__menu-link-item {
     display: flex;
 }
-.header-nav_menu-link {
+
+.header-nav__menu-link {
     /* text-align-last: center; */
+    position: relative;
     text-decoration: none;
     padding: 1.5rem;
-    /* background-color: yellow;  */
+    gap: 1.5rem;
+    /* background-color: yellow;   */
     text-align: center;
     text-align-last: center;
+    font-weight: 900;
     color: var(--primary-text-color);
 }
-.header-nav_menu-link:hover{
-    transform: scale(1.25);
+
+
+.header-nav__menu-link:hover {
+    /* transform: scale(1.25); */
+    cursor: pointer;
+    color: black;
+    /* background-color: blueviolet; */
     transition: var(--primary-all-transition);
 }
+
+.header-nav__menu-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -0.0125rem;
+    width: 0;
+    height: 0.1rem;
+    background-color: yellow;
+    transition: var(--primary-all-transitions);
+}
+
+.header-nav__menu-link:hover::after {
+    width: 100%;
+    transition: var(--primary-all-transition);
+}
+
+.header-nav__menu-item--close-icon {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    color: var(--primary-text-color);
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+
+@media (min-width: 854px) {
+    .header-nav__menu-label {
+        display: none;
+    }
+
+    .header-nav__menu-list {
+        position: static;
+        background-color: transparent;
+        opacity: 1;
+        pointer-events: auto;
+        flex-direction: row;
+        gap: 1rem;
+    }
+}
+
+@media (min-width: 854px) {
+    .hero2{
+        padding: 1rem 1rem 1rem 1rem;
+    }
+    .hero2__info-container{
+        padding: 1rem 1rem 1rem 1rem;
+    }
+    .hero2__proy-container{
+        padding: 1rem 1rem 1rem 1rem;
+    }
+    
+}
+
+@media(min-width:854px) {
+
+    .header-nav__menu-icon-container,
+    .header-nav__menu-item--close-icon {
+        display: none;
+    }
+
+    .header-nav__menu-link-list {
+        position: static;
+        flex-direction: row;
+        background-image: none;
+        gap: 1rem;
+        opacity: 1;
+        width: auto;
+        pointer-events: auto;
+    }
+}
+
+@media (min-width: 854px) {
+    .hero__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hero__info-container {
+        gap: 1.5rem;
+    }
+
+    .hero__info-title {
+        font-size: 1.75rem;
+    }
+
+    .hero__info-subtitle {
+        font-size: 1.5rem;
+    }
+
+    .hero__info-paragraph {
+        display: flex;
+        font-size: 1.25rem;
+        margin: 0;
+    }
+
+    .hero__img-pro {
+        width: 320px;
+        height: 320px;
+    }
+
+    .hero__img-tech {
+        width: 5rem;
+        height: 5rem;
+    }
+}
+
+@media (min-width: 854px) {
+    .hero1__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hero1__info-container {
+        gap: 1.5rem;
+    }
+
+    .hero1__info-title {
+        font-size: 1.75rem;
+    }
+
+    .hero1__info-subtitle {
+        font-size: 1.5rem;
+    }
+}
+
+.hero1{
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.hero1__info-paragraph {
+    display: flex;
+    font-size: 1.25rem;
+    margin: 0;
+}
+
+.hero1__img-pro {
+    width: 320px;
+    height: 320px;
+}
+
+.hero1__img-tech {
+    width: 5rem;
+    height: 5rem;
+}
+
+
